--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>calculator app</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/framework.css">
-
+    <meta name="viewport" content="width=device-width, user-scalable=no">
   </head>
   <body>
     <main>
@@ -15,7 +15,7 @@
 
       </div>
       <div class="keyboard">
-        <div class="grid-4">
+        <div class="grid-4-tiny-4">
           <div class="item" id="keyAc">
             <h1 class="txtcenter">AC</h1>
           </div>
