--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>calculator app</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/framework.css">
-    <meta name="viewport" content="width=500, initial-scale=1">
+    <meta name="viewport" content="width=100%, initial-scale=1">
   </head>
   <body>
     <main>
